--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,1 +1,25 @@
-<router-outlet></router-outlet>
+<div id="container">
+    <div id="header">
+        <div class="header_elem">
+            <img src="assets/catface.jpg" width="7%" style="margin-right: 20%">
+            <div class="headers"><span>C</span>ato<span>G</span>rapher<span>2.0</span></div>
+            <img src="assets/track.jpg" width="7%" style="margin-left: 15%">
+            <img src="assets/heart.jpg" width="7%">
+            <img src="assets/ball.jpg" width="7%">
+        </div>
+
+    </div>
+
+    <div id="menu">
+        <h2>Меню</h2>
+    </div>
+
+    <div id="content">
+        <router-outlet></router-outlet>
+    </div>
+
+    <div id="clear">
+
+    </div>
+
+</div>
