--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,10 +1,16 @@
 <div id="container">
     <div id="header">
         <div class="header_elem">
-            <img src="assets/catface.jpg" width="7%" style="margin-right: 20%">
+            <a routerLink="home">
+                <img src="assets/catface.jpg" width="7%" style="margin-right: 20%">
+            </a>
             <div class="headers"><span>C</span>ato<span>G</span>rapher<span>2.0</span></div>
-            <img src="assets/track.jpg" width="7%" style="margin-left: 15%">
-            <img src="assets/heart.jpg" width="7%">
+            <a routerLink="register">
+                <img src="assets/track.jpg" width="7%" style="margin-left: 15%">
+            </a>
+            <a routerLink="autorization">
+                <img src="assets/heart.jpg" width="7%">
+            </a>
             <img src="assets/ball.jpg" width="7%">
         </div>
 
