--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -8,7 +8,7 @@
             <a routerLink="register">
                 <img src="assets/track.jpg" width="7%" style="margin-left: 15%">
             </a>
-            <a routerLink="autorization">
+            <a routerLink="authorization">
                 <img src="assets/heart.jpg" width="7%">
             </a>
             <img src="assets/ball.jpg" width="7%">
