--- a/FrontEnd/src/app/authorization/authorization.component.html
+++ b/FrontEnd/src/app/authorization/authorization.component.html
@@ -14,7 +14,7 @@
         </li>
         <li>
             <button type="submit" class="submit" (click)="autorization_btn()">Войти</button>
-            <button type="submit" class="submit" routerLink="register">Регистрация</button>
+            <button type="submit" class="submit" routerLink="/register">Регистрация</button>
         </li>
     </ul>
 </form>
